--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -3,3 +3,11 @@
 @tailwind components;
 
 @tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Nunito&family=Roboto&display=swap');
+
+@layer base {
+    html {
+      font-family: Nunito;
+    }
+  }
